@@ -530,11 +530,16 @@ busybox-distclean: busybox-config
 	$(MAKE) -C busybox/scripts/config clean
 	rm -f busybox/.depend busybox/include/config.h busybox/scripts/mkdep
 
+dnsmasq:
+	$(MAKE) -C dnsmasq COPTS=-DHAVE_BROKEN_RTC CFLAGS="$(COPTS)" dnsmasq.a
+
 dnsmasq-install:
 	install -D dnsmasq/contrib/wrt/lease_update.sh $(INSTALLDIR)/dnsmasq/etc/lease_update.sh
 	$(STRIP) $(INSTALLDIR)/dnsmasq/etc/lease_update.sh
-#	install -D dnsmasq/src/dnsmasq $(INSTALLDIR)/dnsmasq/usr/sbin/dnsmasq
-#	$(STRIP) $(INSTALLDIR)/dnsmasq/usr/sbin/dnsmasq
+
+dnsmasq-clean:
+	$(MAKE) -C dnsmasq clean
+
 
 iptables:
 	$(MAKE) -C iptables.linksys BINDIR=/usr/sbin LIBDIR=/usr/lib KERNEL_DIR=$(LINUXDIR)
